Sort out pagination links so that they're aligned correctly

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -43,12 +43,6 @@ h3 {
   margin-bottom: 20px;
 }
 
-.post-excerpt {
-  
-}
-
-post-footer-link
-
 .post-link {
   font-weight: 600;
 }
@@ -173,6 +167,11 @@ input {
   margin-bottom: 70px;
 }
 
+.blog-list-footer {
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
 .cta {
   padding: 30px 45px 25px 45px !important;
   font-weight: 500;
@@ -275,7 +274,7 @@ a.btn {
   }
   .section {
     padding: 100px 45px 100px 45px;
-    p, ul, h2, h3, h6{
+    p, ul, h2, h3, h6, span{
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
